--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,7 +14,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
+      
+    - name: Setup Pages
+      uses: actions/configure-pages@v3
 
     - name: Set up Go
       uses: actions/setup-go@v3
@@ -31,7 +35,11 @@ jobs:
       run: go build -o wa cmd/grpc-storage-cli/main.go
 
   deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - uses: actions/checkout@v3
 
@@ -48,3 +56,7 @@ jobs:
 
     - name: Run web app
       run: ./wa -a=':80' &
+      
+    - name: Deploy to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@v2
