--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -8,6 +8,22 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
 
@@ -33,6 +49,9 @@ jobs:
 
     - name: Build web app
       run: go build -o wa cmd/grpc-storage-cli/main.go
+      
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v1
 
   deploy:
     environment:
