--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -9,8 +9,6 @@ on:
   pull_request:
     branches: [ "main" ]
   
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
@@ -28,7 +26,7 @@ concurrency:
 
 jobs:
 
-  build_and_deploy:
+  buildAndDeploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
