--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -8,7 +8,9 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  
+env:
+  # Setting an environment variable with the value of a configuration variable
+  mongo: ${{ web.MONGO }}  
 
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
@@ -53,10 +55,10 @@ jobs:
       run: go build -o wa cmd/grpc-storage-cli/main.go
       
     - name: Run memory balancer
-      run: ./mb -d=${{ web.MONGO }} &
+      run: ./mb -d=$mongo &
       
     - name: Run storage instance
-      run: ./si -a=':1000' -connect=':800' -d=${{ web.MONGO }} &
+      run: ./si -a=':1000' -connect=':800' -d=$mongo &
 
     - name: Run web app
       run: ./wa -a=':80' &
