--- a/config/default-config.toml
+++ b/config/default-config.toml
@@ -57,7 +57,7 @@ On = true
 
 # Mandatory authorization.
 # If false, authentication is not required for keys and objects that has Default level.
-MandatoryAuthorization = false
+MandatoryAuthorization = true
 
 # Mandatory encryption.
 # If false, encryption is not mandatory for keys and objects that has Secret level.
