:recycle: Refactored error handling in server methods and improved logging in remote.go. Renamed PATH to DefaultPath in tlogger_test.go. Added server addition logging in balancer.go.

--- a/config/default-config.toml
+++ b/config/default-config.toml
@@ -19,7 +19,9 @@ On = false
 # 	"127.0.0.1:8889",
 # 	"127.0.0.1:8890",
 # ]
-Servers = []
+Servers = [
+    "127.0.0.1:8889",
+]
 
 # Balancing only mode.
 BalancingOnly = false
