--- a/config/second-instance-example.toml
+++ b/config/second-instance-example.toml
@@ -3,7 +3,7 @@
 
 # Address of the gRPC server.
 # Example: ":8888"
-GRPC = ":8888"
+GRPC = ":8889"
 
 # Address of the REST server. If empty, no REST server is started.
 # Example: ":6071"
@@ -11,7 +11,7 @@ FastHTTP = ""
 
 # Mechanism for balancing within servers.
 [Balancer]
-On = true
+On = false
 
 # List of servers to balance.
 # Example:
@@ -19,9 +19,7 @@ On = true
 # 	"127.0.0.1:8889",
 # 	"127.0.0.1:8890",
 # ]
-Servers = [
-    "127.0.0.1:8889",
-]
+Servers = []
 
 # Balancing only mode.
 BalancingOnly = false
@@ -51,7 +49,7 @@ On = true
 
 # Host of the web application.
 # Example: "127.0.0.1:8080"
-Host = ":8070"
+Host = ":8071"
 
 # Allows you to enable or disable logs for a web application.
 Logs = false
