:recycle: Enhanced error handling in restore.go and write.go. Adjusted pool size in balancer.go. Added user deletion in commands.go. Conditionally enabled transaction logging in logic.go. Switched to production logger in main.go. Disabled balancer in config.toml.

--- a/config/config.toml
+++ b/config/config.toml
@@ -11,7 +11,7 @@ FastHTTP = ""
 
 # Mechanism for balancing within servers.
 [Balancer]
-On = true
+On = false
 
 # List of servers to balance.
 # Example:
@@ -20,7 +20,7 @@ On = true
 # 	"127.0.0.1:8890",
 # ]
 Servers = [
-    "127.0.0.1:8889",
+    #"127.0.0.1:8889",
 ]
 
 # Balancing only mode.
