--- a/config/config-servers.toml
+++ b/config/config-servers.toml
@@ -1,6 +1,1 @@
-# List of servers to balance.
-Servers = [
-    "127.0.0.1:10001",
-    "127.0.0.1:10002",
-    "127.0.0.1:10003",
-]
+Servers = ["127.0.0.1:8889"]
